# transcribe-kit

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  Trunk.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
frontend/: Cargo.toml  index.html  style.css
frontend/src/: app.rs  live_recording.rs  main.rs  tauri_api.rs
frontend/src/features/: audio.rs  mod.rs  navigation.rs  postprocess.rs  transcription.rs
frontend/src/features/notes/: editor.rs  list.rs  mod.rs  screen.rs
frontend/src/features/settings/: components.rs  input_device_hints.rs  meeting_capture.rs  mod.rs  screen.rs  state.rs
frontend/src/features/transcription/: controller.rs  panels.rs  utils.rs
frontend/src/live_recording/: device_context.rs  mod.rs  recording_goal.rs  tests.rs  timing.rs  transcription_flow.rs
frontend/styles/: base.css  notes.css  postprocess.css  responsive.css  settings.css  transcription.css
scripts/: download-llama-server.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements-sidecar.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  audio_monitor.rs  commands.rs  engine.rs  hotkeys.rs  input_devices.rs  lib.rs  live_recording.rs  llm_engine.rs  main.rs  models.rs  notes.rs  recording_tray.rs  settings.rs  templates.rs  transcription.rs
src-tauri/src/live_recording/: mod.rs  wav_mixing.rs
src-tauri/src/providers/: api_openai_compatible.rs  local_llm.rs  local_parakeet.rs  local_whisper.rs  mod.rs
