[package]
name = "transcribe-kit-frontend"
version = "1.0.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
leptos = { version = "0.8.17", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Document", "Event", "EventTarget", "KeyboardEvent", "Navigator", "Window"] }
