[package]
name = "transcribe-kit"
version = "0.1.0"
description = "Cross-platform transcription desktop app"
authors = ["transcribe-kit team"]
edition = "2021"

[lib]
name = "transcribe_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
directories = "5"
keyring = { version = "3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
