[package]
name = "transcribe-kit"
version = "0.1.0"
description = "Cross-platform transcription desktop app"
authors = ["transcribe-kit team"]
edition = "2021"

[lib]
name = "transcribe_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.17.3"
directories = "5"
hound = "3"
keyring = { version = "3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ogg = "0.9"
opus-decoder = "0.1"
symphonia = { version = "0.5", default-features = false, features = ["aac", "alac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
thiserror = "1"
mp3lame-encoder = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["multipart", "json", "rustls"] }
rfd = "0.15"
tokio = { version = "1", features = ["rt"] }
whisper-rs = "0.16"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
